--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
@@ -13,7 +14,9 @@
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.41.2",
     "router": "^1.3.5",
+    "semantic-ui-react": "^2.1.2",
     "superagent": "^6.1.0",
+    "sweetalert2": "^11.4.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
