--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^16.0.0",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.41.2",
     "router": "^1.3.5",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "superagent": "^6.1.0",
     "sweetalert2": "^11.4.8",
