--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-tsparticles": "^1.41.2",
     "router": "^1.3.5",
     "semantic-ui-css": "^2.4.1",
@@ -45,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
